Integrating OpenJDK 6 b22.
git-svn-id: http://svn.code.sf.net/p/jnode/svn/classlib6@5803 407389f7-7c16-0410-9eee-ad85acb55d7f